--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Demo git</h1>
+    <h1>DEMO GIT</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid doloribus ab repellat recusandae facere perspiciatis, voluptatibus ducimus quaerat fugit quisquam? Dolorum deleniti maiores sequi dolore maxime excepturi consectetur officia earum!</p>
     <script src="./new.js"></script>
 </body>
 </html>
