--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>DEMO GIT</h1>
     <hr>
+    <h2>Hello everyone</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid doloribus ab repellat recusandae facere perspiciatis, voluptatibus ducimus quaerat fugit quisquam? Dolorum deleniti maiores sequi dolore maxime excepturi consectetur officia earum!</p>
     <script src="./new.js"></script>
 </body>
